--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-*, *::after, *::before {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* stylelint-disable csstree/validator */
+*,
+*::after,
+*::before {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 // Colors
 $primary: #446df6;
@@ -20,206 +22,208 @@ $boxs: 3px 5px 8px 2px;
 $transition: all 250ms ease-out;
 
 body {
-    font-family: 'Poppins', sans-serif;
-    display: grid;
-    place-items: center;
-    padding: 32px;
-    color: $dark;
+  font-family: 'Poppins', sans-serif;
+  display: grid;
+  place-items: center;
+  padding: 32px;
+  color: $dark;
 }
 
 .modal-container {
-    position: fixed;
-    display: grid;
-    place-items: center; 
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba($dark, .2);
-    opacity: 0;
-    pointer-events: none;
+  position: fixed;
+  display: grid;
+  place-items: center;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba($dark, 0.2);
+  opacity: 0;
+  pointer-events: none;
+  transition: $transition;
+
+  &.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  .modal {
+    max-width: 700px;
+    max-height: 80vh;
+    overflow: auto;
+    background-color: #fff;
+    border: 2px solid $dark;
+    padding: 32px;
+    position: relative;
+  }
+
+  .modal-title {
+    font-size: 32px;
+    line-height: 1.2;
+    margin-bottom: 16px;
+    max-width: 85%;
+  }
+
+  .modal-btn {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    font-size: 32px;
+    background: none;
+    border: 2px solid $dark;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    box-shadow: $boxs rgba($dark, 0.2);
     transition: $transition;
+    cursor: pointer;
 
-    &.active {
-        opacity: 1;
-        pointer-events: all;
+    &:hover,
+    &focus {
+      outline: none;
+      border: 3px solid $light;
+      color: $light;
+      box-shadow: none;
     }
-
-    .modal {
-        max-width: 700px;
-        max-height: 80vh;
-        overflow: auto;
-        background-color: #fff;
-        border: 2px solid $dark;
-        padding: 32px;
-        position: relative;
-    }
-
-    .modal-title {
-        font-size: 32px;
-        line-height: 1.2;
-        margin-bottom: 16px;
-        max-width: 85%;
-    }
-
-    .modal-btn {
-        position: absolute;
-        top: 6px;
-        right: 6px;
-        font-size: 32px;
-        background: none;
-        border: 2px solid $dark;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        box-shadow: $boxs rgba($dark, .2);
-        transition: $transition;
-        cursor: pointer;
-
-        &:hover, &focus {
-            outline: none;
-            border: 3px solid $light;
-            color: $light;
-            box-shadow: none;
-        }
-    }
+  }
 }
 
-
-
 .form-container {
-    max-width: 1000px;
+  max-width: 1000px;
+  text-align: center;
+
+  h1 {
+    font-size: 48px;
+    text-align: center;
+  }
+
+  h3 {
+    color: $success;
+    text-align: center;
+  }
+
+  .message {
+    margin: 20px 0 24px;
+    color: white;
+    padding: 24px;
     text-align: center;
 
-    h1 {
-        font-size: 48px;
-        text-align: center;
+    &.success-message {
+      background-color: $success;
+      box-shadow: 2px 4px 7px 2px rgba($success, 0.2);
     }
 
-    h3 {
-        color: $success;
-        text-align: center;
+    &.remove-message {
+      background-color: $primary;
+      box-shadow: 2px 4px 7px 2px rgba($primary, 0.2);
     }
 
-    .message {
-        margin: 20px 0 24px;
-        color: white;
-        padding: 24px;
-        text-align: center;
-
-      &.success-message {
-          background-color: $success;
-          box-shadow: 2px 4px 7px 2px rgba($success, .2);
-      }  
-       &.remove-message {
-          background-color: $primary;
-          box-shadow: 2px 4px 7px 2px rgba($primary, .2);
-      }  
-        &.alert-message {
-          background-color: $danger;
-          box-shadow: 2px 4px 7px 2px rgba($danger, .2);
-      }  
+    &.alert-message {
+      background-color: $danger;
+      box-shadow: 2px 4px 7px 2px rgba($danger, 0.2);
     }
+  }
 }
 
 form {
-    display: grid;
-    grid-gap: 24px;
-    margin: 24px 0;
-    width: 100%;
+  display: grid;
+  grid-gap: 24px;
+  margin: 24px 0;
+  width: 100%;
 
-    label, input, textarea {
-        font-family: inherit;
-        font-size: inherit;
-    }
+  label,
+  input,
+  textarea {
+    font-family: inherit;
+    font-size: inherit;
+  }
 
-    [for="title"], [for="note"] {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 24px;
-        gap: 24px;
-        background-color: rgba($light, .2);
-        font-weight: bold;
-    }
+  [for="title"],
+  [for="note"] {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 24px;
+    gap: 24px;
+    background-color: rgba($light, 0.2);
+    font-weight: bold;
+  }
 
-    input, textarea {
-        flex: 1 1 80%;
-        border: 2px solid $light;
-        padding: 10px;
-        color: $dark;
-        outline: none;
-    }
+  input,
+  textarea {
+    flex: 1 1 80%;
+    border: 2px solid $light;
+    padding: 10px;
+    color: $dark;
+    outline: none;
+  }
 
-    [type="submit"] {
-        background-color: $success;
-        box-shadow: $boxs rgba($success, .2);
-        font-size: 22px;
-        color: white;
-        padding: 10px;
-        cursor: pointer;
-        transition: all 250ms ease-in-out;
-    } 
+  [type="submit"] {
+    background-color: $success;
+    box-shadow: $boxs rgba($success, 0.2);
+    font-size: 22px;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 250ms ease-in-out;
+  }
 
-    [type="submit"]:hover {
-        transform: translateY(-4px);
-    }
+  [type="submit"]:hover {
+    transform: translateY(-4px);
+  }
 }
 
 .note-container {
-    margin: 32px auto 16px;
+  margin: 32px auto 16px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280, 1fr));
+  gap: 24px;
+
+  .note {
+    border: 2px solid rgba($primary, 0.2);
+    padding: 24px;
+    transition: all 250ms ease-out;
+  }
+
+  .note-title {
+    font-size: 32px;
+    margin-bottom: 10px;
+  }
+
+  .note-body {
+    overflow: hidden;
+    max-height: 128px;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 4;
+  }
+
+  .note-btns {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280, 1fr));
-    gap: 24px;
-    
-    
-    .note {
-        border: 2px solid rgba($primary, .2);
-        padding: 24px;
-        transition: all 250ms ease-out;
+    grid-template-columns: auto auto;
+    gap: 10px;
+
+    .note-btn {
+      padding: 10px 24px;
+      margin-top: 24px;
+      color: white;
+      cursor: pointer;
+      transition: $transition;
     }
 
-    .note-title {
-        font-size: 32px;
-        margin-bottom: 10px;
+    .note-btn:hover {
+      transform: translateY(-4px);
     }
 
-    .note-body {
-        overflow: hidden;
-        max-height: 128px;
-        -webkit-box-orient: vertical;
-        display: -webkit-box;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 4;
-    }
-
-    .note-btns {
-      display: grid;
-      grid-template-columns: auto auto;
-      gap: 10px;
-
-        .note-btn {
-            padding: 10px 24px;
-            margin-top: 24px;
-            color: white;
-            cursor: pointer;
-            transition: $transition;
-        }
-
-        .note-btn:hover {
-            transform: translateY(-4px);
-        }
-    
     .view-note {
-        background-color: $primary;
-        box-shadow: $boxs rgba($primary, .2);
+      background-color: $primary;
+      box-shadow: $boxs rgba($primary, 0.2);
     }
+
     .delete-note {
-        background-color: $danger;
-        box-shadow: $boxs rgba($danger, .2);
+      background-color: $danger;
+      box-shadow: $boxs rgba($danger, 0.2);
     }
-    }
-
+  }
 }
-
-
